--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "shangcheng",
   "version": "1.0.0",
   "description": "shangcheng",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "test": "shangcheng"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"node index.js"
   },
   "repository": {
     "type": "git",
